test/should-fail/vsgc1450sf.f3
/**
 * Should-fail test VSGC-1450 : object literal local in bind
 *
 * Original test.  Should now fail because of VSGC-3563
 *
 * @test/compile-error
 */

class DragNode { 
  var onMouseDragged : function(Integer) : Void;
  init {
    println("Creating new DragNode");
  }
}

var dragNode = bind DragNode {
  var dragX : Integer; 
  onMouseDragged:
    function(newX : Integer):Void {
      dragX = newX;
    }
}

for (i in [1..10]) {
  dragNode.onMouseDragged(i)
}

